--- a/LandSenseAuth/LandSenseAuth/LandSenseAuth/LandSenseAuth.csproj
+++ b/LandSenseAuth/LandSenseAuth/LandSenseAuth/LandSenseAuth.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.362" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Xamarin.Auth" Version="1.6.0" />
+    <PackageReference Include="Xamarin.Auth.XamarinForms" Version="1.6.0" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
   </ItemGroup>
 
 </Project>
